Fixed incomplete dynamic repainting of table backgrounds by including the top and bottom extra space in the hit tests.

BUG: 75267

svn path=/trunk/kdelibs/; revision=389727